--- a/index_RO_table.html
+++ b/index_RO_table.html
@@ -1959,6 +1959,17 @@
       <td>Beijing, Guangdong, Hebei, Liaoning, Shandong, Shanghai</td>
     </tr>
     <tr>
+      <td>Granada Industrial Navigation Association</td>
+      <td>格拉纳达工商航海协会</td>
+      <td>Hunan Department of Commerce</td>
+      <td>商务厅</td>
+      <td>Spain</td>
+      <td>Economic Development, Trade</td>
+      <td>Hunan</td>
+      <td>2019-11-21</td>
+      <td>Hunan</td>
+    </tr>
+    <tr>
       <td>Gratia Foundation</td>
       <td>华恩基金会有限公司</td>
       <td>State Council Overseas Chinese Affairs Office</td>
