--- a/index_RO_table.html
+++ b/index_RO_table.html
@@ -2225,7 +2225,7 @@
     <tr>
       <td>Heifer Hong Kong</td>
       <td>香港小母牛</td>
-      <td>The State Council Leading Group Office of Poverty Alleviation and Development General Affairs Department</td>
+      <td>State Council Leading Group Office of Poverty Alleviation and Development General Affairs Department</td>
       <td>国务院扶贫开发领导小组办公室综合司</td>
       <td>Hong Kong</td>
       <td>Agriculture, Economic Development, Environment, Poverty Alleviation, Rural Issues/Development</td>
@@ -2254,6 +2254,17 @@
       <td>Fujian</td>
       <td>2018-03-08</td>
       <td>Fujian</td>
+    </tr>
+    <tr>
+      <td>Ho Leung Ho Lee Foundation</td>
+      <td>何梁何利基金</td>
+      <td>Ministry of Science and Technology</td>
+      <td>中华人民共和国科学技术部</td>
+      <td>Hong Kong</td>
+      <td>Technology</td>
+      <td>Beijing</td>
+      <td>2019-12-02</td>
+      <td>China</td>
     </tr>
     <tr>
       <td>Holt International</td>
@@ -2297,6 +2308,17 @@
       <td>Arts and Culture, Disaster Relief, Economic Development, Education, Health, Law and Governance</td>
       <td>Chongqing</td>
       <td>2019-11-05</td>
+      <td>China</td>
+    </tr>
+    <tr>
+      <td>Hong Kong Institute of Bankers</td>
+      <td>香港银行学会</td>
+      <td>China Banking and Insurance Regulatory Commission</td>
+      <td>中国银行保险监督管理委员会</td>
+      <td>Hong Kong</td>
+      <td>Civil Society Capacity-Building, Economic Development</td>
+      <td>Beijing</td>
+      <td>2019-12-02</td>
       <td>China</td>
     </tr>
     <tr>
@@ -3411,6 +3433,17 @@
       <td>Guangdong</td>
     </tr>
     <tr>
+      <td>Macao Tong Chai Charity Association</td>
+      <td>澳门同济慈善会</td>
+      <td>State Council Hong Kong and Macau Affairs Office</td>
+      <td>国务院港澳事务办公室</td>
+      <td>Macau</td>
+      <td>Civil Society Capacity-Building, Education, Youth</td>
+      <td>Beijing</td>
+      <td>2019-11-27</td>
+      <td>China</td>
+    </tr>
+    <tr>
       <td>Macau International Investment Association</td>
       <td>澳门国际投资协会</td>
       <td>Guangdong Department of Commerce</td>
@@ -3468,7 +3501,7 @@
     <tr>
       <td>Mercy Corps</td>
       <td>国际美慈组织</td>
-      <td>The State Council Leading Group Office of Poverty Alleviation and Development</td>
+      <td>State Council Leading Group Office of Poverty Alleviation and Development General Affairs Department</td>
       <td>国务院扶贫开发领导小组办公室</td>
       <td>United States</td>
       <td>Civil Society Capacity-Building, Disaster Relief, International Relations/Exchange, Poverty Alleviation</td>
@@ -4544,6 +4577,17 @@
       <td>Hubei</td>
     </tr>
     <tr>
+      <td>Southwest Research Institute</td>
+      <td>美国西南研究院</td>
+      <td>Beijing Commission of Science and Technology</td>
+      <td>北京市科学技术委员会</td>
+      <td>United States</td>
+      <td>Economic Development, Technology</td>
+      <td>Beijing</td>
+      <td>2019-12-02</td>
+      <td>China</td>
+    </tr>
+    <tr>
       <td>Sowers Action</td>
       <td>苗圃行动</td>
       <td>Yunnan Department of Education</td>
@@ -5278,6 +5322,17 @@
       <td>Health</td>
       <td>Shandong</td>
       <td>2017-05-18</td>
+      <td>China</td>
+    </tr>
+    <tr>
+      <td>World Cement Association</td>
+      <td>世界水泥协会</td>
+      <td>Beijing Bureau of Economy and Information Technology</td>
+      <td>北京市经济和信息化局</td>
+      <td>United Kingdom</td>
+      <td>Economic Development, Environment, Trade</td>
+      <td>Beijing</td>
+      <td>2019-12-02</td>
       <td>China</td>
     </tr>
     <tr>
