--- a/piece/HKsurvey/HKsurveytable.html
+++ b/piece/HKsurvey/HKsurveytable.html
@@ -1,1 +1,56 @@
+<!DOCTYPE html>
+<html>
+  <head>
+      <meta charset='utf-8' />
+      <title>Fortune 500 Companies with Operations in Xinjiang</title>
 
+
+
+<style>
+        table.tableizer-table thead {
+            background-color:#eee;
+            color:#000000;
+            font-weight: bold;
+            font-size: 18px;
+            cursor: default;
+        }
+        table.tableizer-table {
+		        font-size: 12px;
+		        border: 1px solid #CCC;
+		        font-family: Arial, Helvetica, sans-serif;
+      	}
+        table.tableizer-table {border-spacing: 0}
+        tr:nth-child(odd) {background: #e6e6e6}
+        tr:nth-child(even) {background: #FFF}
+        tr td:nth-child(3) {text-align: center;}
+        td {
+            padding: 4px;
+        		margin: 3px;
+        		border: 1px solid #CCC;}
+        table.tableizer-table thead th {
+	         padding: 8px;
+	         background-color: #FFF;
+	         font-size: 16px;
+           font-weight: bold;
+           border: 1px solid #CCC;
+        }
+</style>
+
+
+
+      </style>
+  </head>
+
+  <body>
+<table class="tableizer-table">
+<thead><tr class="tableizer-firstrow"><th>Question</th><th>Strongly agree</th><th>&nbsp;</th><th>&nbsp;</th><th>&nbsp;</th><th>Somewhat agree</th><th>&nbsp;</th><th>&nbsp;</th><th>&nbsp;</th><th>Neither agree nor disagree</th><th>&nbsp;</th><th>&nbsp;</th><th>&nbsp;</th><th>Somewhat disagree</th><th>&nbsp;</th><th>&nbsp;</th><th>&nbsp;</th><th>Strongly disagree</th><th>&nbsp;</th><th>&nbsp;</th><th>&nbsp;</th><th>Total</th><th>&nbsp;</th></tr></thead><tbody>
+ <tr><td>How much do you agree or disagree with the following statements...</td><td>(1)</td><td>&nbsp;</td><td>(2)</td><td>&nbsp;</td><td>(1)</td><td>&nbsp;</td><td>(2)</td><td>&nbsp;</td><td>(1)</td><td>&nbsp;</td><td>(2)</td><td>&nbsp;</td><td>(1)</td><td>&nbsp;</td><td>(2)</td><td>&nbsp;</td><td>(1)</td><td>&nbsp;</td><td>(2)</td><td>&nbsp;</td><td>(1)</td><td>(2)</td></tr>
+ <tr><td>Hong Kong is a democracy</td><td>21.56%</td><td>216</td><td>11.28%</td><td>29</td><td>24.05%</td><td>241</td><td>16.73%</td><td>43</td><td>20.56%</td><td>206</td><td>16.34%</td><td>42</td><td>22.65%</td><td>227</td><td>31.91%</td><td>82</td><td>11.18%</td><td>112</td><td>23.74%</td><td>61</td><td>1002</td><td>257</td></tr>
+ <tr><td>The rule of law exists in Hong Kong today</td><td>13.59%</td><td>136</td><td>2.33%</td><td>6</td><td>39.86%</td><td>399</td><td>20.23%</td><td>52</td><td>24.58%</td><td>246</td><td>18.29%</td><td>47</td><td>17.68%</td><td>177</td><td>35.41%</td><td>91</td><td>4.30%</td><td>43</td><td>23.74%</td><td>61</td><td>1001</td><td>257</td></tr>
+ <tr><td>Carrie Lam is a worse Chief Executive than CY Leung</td><td>54.99%</td><td>551</td><td>62.26%</td><td>160</td><td>20.26%</td><td>203</td><td>17.12%</td><td>44</td><td>21.46%</td><td>215</td><td>19.07%</td><td>49</td><td>2.40%</td><td>24</td><td>1.56%</td><td>4</td><td>0.90%</td><td>9</td><td>0.00%</td><td>0</td><td>1002</td><td>257</td></tr>
+ <tr><td>Policemen are victims of China and the HK government</td><td>10.91%</td><td>109</td><td>2.72%</td><td>7</td><td>21.62%</td><td>216</td><td>13.62%</td><td>35</td><td>22.72%</td><td>227</td><td>10.51%</td><td>27</td><td>24.52%</td><td>245</td><td>29.57%</td><td>76</td><td>20.22%</td><td>202</td><td>43.58%</td><td>112</td><td>999</td><td>257</td></tr>
+ <tr><td>Violence can be a legitimate means of resistance</td><td>30.23%</td><td>302</td><td>37.35%</td><td>96</td><td>37.74%</td><td>377</td><td>42.02%</td><td>108</td><td>21.52%</td><td>215</td><td>12.84%</td><td>33</td><td>7.91%</td><td>79</td><td>6.23%</td><td>16</td><td>2.60%</td><td>26</td><td>1.56%</td><td>4</td><td>999</td><td>257</td></tr>
+ <tr><td>The protesters on Wednesday evening [June 17] did everything right</td><td>34.97%</td><td>350</td><td>&nbsp;</td><td>&nbsp;</td><td>37.86%</td><td>379</td><td>&nbsp;</td><td>&nbsp;</td><td>21.28%</td><td>213</td><td>&nbsp;</td><td>&nbsp;</td><td>5.00%</td><td>50</td><td>&nbsp;</td><td>&nbsp;</td><td>0.90%</td><td>9</td><td>&nbsp;</td><td>&nbsp;</td><td>1001</td><td></td></tr>
+</tbody></table>
+    </body>
+</html>
