--- a/piece/HKsurvey/HKsurveytable.html
+++ b/piece/HKsurvey/HKsurveytable.html
@@ -19,6 +19,15 @@
 		        border: 1px solid #CCC;
 		        font-family: Arial, Helvetica, sans-serif;
       	}
+	div.tooltip1 {
+    overflow:hidden;
+    max-width: 90%;
+    height: auto;
+    border-radius: 0px;
+    font: 14px PortraitText;
+    padding: 0px;
+    text-align: left;
+  }
         table.tableizer-table {border-spacing: 0}
         tr:nth-child(odd) {background: #e6e6e6}
         tr:nth-child(even) {background: #FFF}
