--- a/piece/HKsurvey/HKsurveytable.html
+++ b/piece/HKsurvey/HKsurveytable.html
@@ -28,6 +28,14 @@
     padding: 0px;
     text-align: left;
   }
+	
+	{
+  overflow:hidden;
+  max-width: 90%;
+  margin-bottom:5px;
+  text-align:center;
+  vertical-align: text-top;
+  }
         table.tableizer-table {border-spacing: 0}
         tr:nth-child(odd) {background: #e6e6e6}
         tr:nth-child(even) {background: #FFF}
