--- a/piece/HKsurvey/HKsurveytable.html
+++ b/piece/HKsurvey/HKsurveytable.html
@@ -53,7 +53,13 @@
         }
 </style>
 
-
+<script>
+	  var Choropleth = function(json, options) {
+      var projection = options.projection
+      var w = options.width || 960
+      var h = options.height || 600
+      var path = options.path
+	</script?
 
       </style>
   </head>
