--- a/piece/HKsurvey/HKsurveytable.html
+++ b/piece/HKsurvey/HKsurveytable.html
@@ -43,7 +43,7 @@
       var w = options.width || 960
       var h = options.height || 600
       var path = options.path
-	</script?
+	  </script>
 
       </style>
   </head>
