--- a/piece/HKsurvey/HKsurveytable.html
+++ b/piece/HKsurvey/HKsurveytable.html
@@ -42,6 +42,13 @@
       </style>
   </head>
 
+<script>
+	  var Choropleth = function(json, options) {
+      var projection = options.projection
+      var w = options.width || 960
+      var h = options.height || 600
+      var path = options.path
+	  </script>
   <body>
 <table class="tableizer-table">
 <thead><tr class="tableizer-firstrow"><th>Question</th><th>Strongly agree</th><th>&nbsp;</th><th>&nbsp;</th><th>&nbsp;</th><th>Somewhat agree</th><th>&nbsp;</th><th>&nbsp;</th><th>&nbsp;</th><th>Neither agree nor disagree</th><th>&nbsp;</th><th>&nbsp;</th><th>&nbsp;</th><th>Somewhat disagree</th><th>&nbsp;</th><th>&nbsp;</th><th>&nbsp;</th><th>Strongly disagree</th><th>&nbsp;</th><th>&nbsp;</th><th>&nbsp;</th><th>Total</th><th>&nbsp;</th></tr></thead><tbody>
