--- a/piece/HKsurvey/HKsurveytable.html
+++ b/piece/HKsurvey/HKsurveytable.html
@@ -41,6 +41,23 @@
 
       </style>
   </head>
+	div.tooltip1 {
+    overflow:hidden;
+    max-width: 90%;
+    height: auto;
+    border-radius: 0px;
+    font: 14px PortraitText;
+    padding: 0px;
+    text-align: left;
+  }
+	
+	{
+  overflow:hidden;
+  max-width: 90%;
+  margin-bottom:5px;
+  text-align:center;
+  vertical-align: text-top;
+  }
 
 <script>
 	  var Choropleth = function(json, options) {
