--- a/piece/HKsurvey/HKsurveytable.html
+++ b/piece/HKsurvey/HKsurveytable.html
@@ -41,6 +41,20 @@
 
       </style>
   </head>
+div.tooltip {
+    position: absolute;
+    top:220px;
+    left: 40px;
+    min-width: 80px;
+    height: auto;
+    background: none repeat scroll 0 0 #cccccc;
+    border-radius: 8px;
+    font: 20px DrukText;
+    padding: 5px;
+    text-align: center;
+    border: 1px;
+    pointer-events: none;
+  }
 	div.tooltip1 {
     overflow:hidden;
     max-width: 90%;
