--- a/piece/HKsurvey/HKsurveytable.html
+++ b/piece/HKsurvey/HKsurveytable.html
@@ -2,7 +2,7 @@
 <html>
   <head>
       <meta charset='utf-8' />
-      <title>Fortune 500 Companies with Operations in Xinjiang</title>
+      <title>Hong Kong Protests Survey</title>
 
 
 
