--- a/piece/HKsurvey/HKsurveytable.html
+++ b/piece/HKsurvey/HKsurveytable.html
@@ -64,8 +64,8 @@
 <table class="tableizer-table">
 <thead><tr class="tableizer-firstrow">
 <th class="sticky-col first-col">How much do you agree or disagree with the following statements...</th>
-<th>Strongly agree (%) (Round 1)</th>
-<th>Round 1: Strongly agree (number)</th>
+<th>Round 1: Strongly agree (%)</th>
+<th>Round 1: Strongly agree (number of respondents)</th>
 <th>Round 2: Strongly agree (%)</th>
 <th>Round 2: Strongly agree (number)</th>
 <th>Round 1: Somewhat agree (%)</th>
