--- a/piece/HKsurvey/HKsurveytable.html
+++ b/piece/HKsurvey/HKsurveytable.html
@@ -64,28 +64,28 @@
 <table class="tableizer-table">
 <thead><tr class="tableizer-firstrow">
 <th class="sticky-col first-col">How much do you agree or disagree with the following statements...</th>
-<th>Round 1: Strongly agree (%)</th>
-<th>Round 1: Strongly agree (number of respondents)</th>
-<th>Round 2: Strongly agree (%)</th>
-<th>Round 2: Strongly agree (number)</th>
-<th>Round 1: Somewhat agree (%)</th>
-<th>Round 1: Somewhat agree (number)</th>
-<th>Round 2: Somewhat agree (%)</th>
-<th>Round 2: Somewhat agree (number)</th>
-<th>Round 1: Neither agree nor disagree (%)</th>
-<th>Round 1: Neither agree nor disagree (number)</th>
-<th>Round 2: Neither agree nor disagree (%)</th>
-<th>Round 2: Neither agree nor disagree (number)</th>
-<th>Round 1: Somewhat disagree (%)</th>
-<th>Round 1: Somewhat disagree (number)</th>
-<th>Round 2: Somewhat disagree (%)</th>
-<th>Round 2: Somewhat disagree (number)</th>
-<th>Round 1: Strongly disagree (%)</th>
-<th>Round 1: Strongly disagree (number)</th>
-<th>Round 1: Strongly disagree (%)</th>
-<th>Round 1: Strongly disagree (number)</th>
-<th>Round 1: Total Number</th>
-<th>Round 2: Total Number</th>
+<th>Round 1: Strongly Agree (%)</th>
+<th>Round 1: Strongly Agree (number of respondents)</th>
+<th>Round 2: Strongly Agree (%)</th>
+<th>Round 2: Strongly Agree (number of respondents)</th>
+<th>Round 1: Somewhat Agree (%)</th>
+<th>Round 1: Somewhat Agree (number of respondents)</th>
+<th>Round 2: Somewhat Agree (%)</th>
+<th>Round 2: Somewhat Agree (number of respondents)</th>
+<th>Round 1: Neither Agree nor Disagree (%)</th>
+<th>Round 1: Neither Agree nor Disagree (number of respondents)</th>
+<th>Round 2: Neither Agree nor Disagree (%)</th>
+<th>Round 2: Neither Agree nor Disagree (number of respondents)</th>
+<th>Round 1: Somewhat Disagree (%)</th>
+<th>Round 1: Somewhat Disagree (number of respondents)</th>
+<th>Round 2: Somewhat Disagree (%)</th>
+<th>Round 2: Somewhat Disagree (number of respondents)</th>
+<th>Round 1: Strongly Disagree (%)</th>
+<th>Round 1: Strongly Disagree (number of respondents)</th>
+<th>Round 1: Strongly Disagree (%)</th>
+<th>Round 1: Strongly Disagree (number of respondents)</th>
+<th>Round 1: Total Number of Respondents</th>
+<th>Round 2: Total Number of Respondents</th>
 </tr></thead><tbody>
  <tr><td class="sticky-col first-col">Hong Kong is a democracy</td><td>21.56%</td><td>216</td><td>11.28%</td><td>29</td><td>24.05%</td><td>241</td><td>16.73%</td><td>43</td><td>20.56%</td><td>206</td><td>16.34%</td><td>42</td><td>22.65%</td><td>227</td><td>31.91%</td><td>82</td><td>11.18%</td><td>112</td><td>23.74%</td><td>61</td><td>1002</td><td>257</td></tr>
 
