--- a/piece/HKsurvey/HKsurveytable.html
+++ b/piece/HKsurvey/HKsurveytable.html
@@ -66,24 +66,24 @@
 <th class="sticky-col first-col">How much do you agree or disagree with the following statements...</th>
 <th>Round&nbsp;1: Strongly Agree (%)</th>
 <th>Round 1: Strongly Agree (number of respondents)</th>
-<th>Round 2: Strongly Agree (%)</th>
+<th>Round&nbsp;2: Strongly Agree (%)</th>
 <th>Round 2: Strongly Agree (number of respondents)</th>
 <th>Round 1: Somewhat Agree (%)</th>
 <th>Round 1: Somewhat Agree (number of respondents)</th>
 <th>Round 2: Somewhat Agree (%)</th>
 <th>Round 2: Somewhat Agree (number of respondents)</th>
-<th>Round 1: Neither Agree nor Disagree (%)</th>
+<th>Round&nbsp;1: Neither Agree nor Disagree (%)</th>
 <th>Round 1: Neither Agree nor Disagree (number of respondents)</th>
-<th>Round 2: Neither Agree nor Disagree (%)</th>
+<th>Round&nbsp;2: Neither Agree nor Disagree (%)</th>
 <th>Round 2: Neither Agree nor Disagree (number of respondents)</th>
 <th>Round 1: Somewhat Disagree (%)</th>
 <th>Round 1: Somewhat Disagree (number of respondents)</th>
 <th>Round 2: Somewhat Disagree (%)</th>
 <th>Round 2: Somewhat Disagree (number of respondents)</th>
-<th>Round 1: Strongly Disagree (%)</th>
+<th>Round&nbsp;1: Strongly Disagree (%)</th>
 <th>Round 1: Strongly Disagree (number of respondents)</th>
-<th>Round 1: Strongly Disagree (%)</th>
-<th>Round 1: Strongly Disagree (number of respondents)</th>
+<th>Round&nbsp;2: Strongly Disagree (%)</th>
+<th>Round 2: Strongly Disagree (number of respondents)</th>
 <th>Round 1: Total Number of Respondents</th>
 <th>Round 2: Total Number of Respondents</th>
 </tr></thead><tbody>
