--- a/piece/HKsurvey/HKsurveytable.html
+++ b/piece/HKsurvey/HKsurveytable.html
@@ -23,15 +23,16 @@
         		border: 1px solid #CCC;}
         table.tableizer-table thead th {
 	         padding: 8px;
-	         background-color: #e6e6e6;
+	         background-color: #FFFFFF;
 	         font-size: 16px;
            font-weight: bold;
            border: 1px solid #CCC;
+					 vertical-align: text-top;
         }
 				.sticky-col {
 				  position: sticky;
 				  position: -webkit-sticky;
-				  background-color: #e6e6e6;
+				  background-color: #FFFFFF;
 				}
 
 				.first-col {
@@ -39,6 +40,9 @@
 				  min-width: 100px;
 				  max-width: 100px;
 				  left: 0px;
+				}
+				.gray-col {
+					background-color: #e6e6e6;
 				}
 
 
@@ -87,7 +91,7 @@
 <th>Round 1: Total Number of Respondents</th>
 <th>Round 2: Total Number of Respondents</th>
 </tr></thead><tbody>
- <tr><td class="sticky-col first-col">Hong Kong is a democracy</td><td>21.56%</td><td>216</td><td>11.28%</td><td>29</td><td>24.05%</td><td>241</td><td>16.73%</td><td>43</td><td>20.56%</td><td>206</td><td>16.34%</td><td>42</td><td>22.65%</td><td>227</td><td>31.91%</td><td>82</td><td>11.18%</td><td>112</td><td>23.74%</td><td>61</td><td>1002</td><td>257</td></tr>
+ <tr><td class="sticky-col first-col">Hong Kong is a democracy</td><td class="gray-col">21.56%</td><td class="gray-col">216</td><td>11.28%</td><td>29</td><td class="gray-col">24.05%</td><td class="gray-col">241</td><td>16.73%</td><td>43</td><td class="gray-col">20.56%</td><td class="gray-col">206</td><td>16.34%</td><td>42</td><td class="gray-col">22.65%</td><td class="gray-col">227</td><td>31.91%</td><td>82</td><td class="gray-col">11.18%</td><td class="gray-col">112</td><td>23.74%</td><td>61</td><td class="gray-col">1002</td><td>257</td></tr>
 
  <tr><td class="sticky-col first-col">The rule of law exists in Hong Kong today</td><td>13.59%</td><td>136</td><td>2.33%</td><td>6</td><td>39.86%</td><td>399</td><td>20.23%</td><td>52</td><td>24.58%</td><td>246</td><td>18.29%</td><td>47</td><td>17.68%</td><td>177</td><td>35.41%</td><td>91</td><td>4.30%</td><td>43</td><td>23.74%</td><td>61</td><td>1001</td><td>257</td></tr>
 
@@ -98,7 +102,7 @@
  <tr><td class="sticky-col first-col">Violence can be a legitimate means of resistance</td><td>30.23%</td><td>302</td><td>37.35%</td><td>96</td><td>37.74%</td><td>377</td><td>42.02%</td><td>108</td><td>21.52%</td><td>215</td><td>12.84%</td><td>33</td><td>7.91%</td><td>79</td><td>6.23%</td><td>16</td><td>2.60%</td><td>26</td><td>1.56%</td><td>4</td><td>999</td><td>257</td></tr>
 
  <tr><td class="sticky-col first-col">The protesters on Wednesday evening [June 17] did everything right</td><td>34.97%</td><td>350</td><td>&nbsp;</td><td>&nbsp;</td><td>37.86%</td><td>379</td><td>&nbsp;</td><td>&nbsp;</td><td>21.28%</td><td>213</td><td>&nbsp;</td><td>&nbsp;</td><td>5.00%</td><td>50</td><td>&nbsp;</td><td>&nbsp;</td><td>0.90%</td><td>9</td><td>&nbsp;</td><td>&nbsp;</td><td>1001</td><td></td></tr>
- 
+
 </tbody></table>
     </body>
 		</div>
