--- a/piece/HKsurvey/HKsurveytable.html
+++ b/piece/HKsurvey/HKsurveytable.html
@@ -38,8 +38,10 @@
 				.first-col {
 				  width: 100px;
 				  min-width: 100px;
-				  max-width: 100px;
+				  max-width: 120px;
 				  left: 0px;
+					font-size: 16px;
+					font-weight: bold;
 				}
 				.gray-col {
 					background-color: #e6e6e6;
