--- a/piece/HKsurvey/HKsurveytable.html
+++ b/piece/HKsurvey/HKsurveytable.html
@@ -70,7 +70,7 @@
 <table class="tableizer-table">
 <thead><tr class="tableizer-firstrow">
 <th class="sticky-col first-col">How much do you agree or disagree with the following statements...</th>
-<th>Round&nbsp;1: Strongly Agree (%)</th>
+<th class="gray-col">Round&nbsp;1: Strongly Agree (%)</th>
 <th>Round 1: Strongly Agree (number of respondents)</th>
 <th>Round&nbsp;2: Strongly Agree (%)</th>
 <th>Round 2: Strongly Agree (number of respondents)</th>
