--- a/piece/HKsurvey/HKsurveytable.html
+++ b/piece/HKsurvey/HKsurveytable.html
@@ -23,7 +23,6 @@
         		border: 1px solid #CCC;}
         table.tableizer-table thead th {
 	         padding: 8px;
-	         background-color: #FFFFFF;
 	         font-size: 16px;
            font-weight: bold;
            border: 1px solid #CCC;
@@ -37,8 +36,8 @@
 
 				.first-col {
 				  width: 100px;
-				  min-width: 100px;
-				  max-width: 120px;
+				  min-width: 140px;
+				  max-width: 140px;
 				  left: 0px;
 					font-size: 16px;
 					font-weight: bold;
@@ -71,26 +70,26 @@
 <thead><tr class="tableizer-firstrow">
 <th class="sticky-col first-col">How much do you agree or disagree with the following statements...</th>
 <th class="gray-col">Round&nbsp;1: Strongly Agree (%)</th>
-<th>Round 1: Strongly Agree (number of respondents)</th>
+<th class="gray-col">Round 1: Strongly Agree (number of respondents)</th>
 <th>Round&nbsp;2: Strongly Agree (%)</th>
 <th>Round 2: Strongly Agree (number of respondents)</th>
-<th>Round 1: Somewhat Agree (%)</th>
-<th>Round 1: Somewhat Agree (number of respondents)</th>
+<th class="gray-col">Round 1: Somewhat Agree (%)</th>
+<th class="gray-col">Round 1: Somewhat Agree (number of respondents)</th>
 <th>Round 2: Somewhat Agree (%)</th>
 <th>Round 2: Somewhat Agree (number of respondents)</th>
-<th>Round&nbsp;1: Neither Agree nor Disagree (%)</th>
-<th>Round 1: Neither Agree nor Disagree (number of respondents)</th>
+<th class="gray-col">Round&nbsp;1: Neither Agree nor Disagree (%)</th>
+<th class="gray-col">Round 1: Neither Agree nor Disagree (number of respondents)</th>
 <th>Round&nbsp;2: Neither Agree nor Disagree (%)</th>
 <th>Round 2: Neither Agree nor Disagree (number of respondents)</th>
-<th>Round 1: Somewhat Disagree (%)</th>
-<th>Round 1: Somewhat Disagree (number of respondents)</th>
+<th class="gray-col">Round 1: Somewhat Disagree (%)</th>
+<th class="gray-col">Round 1: Somewhat Disagree (number of respondents)</th>
 <th>Round 2: Somewhat Disagree (%)</th>
 <th>Round 2: Somewhat Disagree (number of respondents)</th>
-<th>Round&nbsp;1: Strongly Disagree (%)</th>
-<th>Round 1: Strongly Disagree (number of respondents)</th>
+<th class="gray-col">Round&nbsp;1: Strongly Disagree (%)</th>
+<th class="gray-col">Round 1: Strongly Disagree (number of respondents)</th>
 <th>Round&nbsp;2: Strongly Disagree (%)</th>
 <th>Round 2: Strongly Disagree (number of respondents)</th>
-<th>Round 1: Total Number of Respondents</th>
+<th class="gray-col">Round 1: Total Number of Respondents</th>
 <th>Round 2: Total Number of Respondents</th>
 </tr></thead><tbody>
  <tr><td class="sticky-col first-col">Hong Kong is a democracy</td><td class="gray-col">21.56%</td><td class="gray-col">216</td><td>11.28%</td><td>29</td><td class="gray-col">24.05%</td><td class="gray-col">241</td><td>16.73%</td><td>43</td><td class="gray-col">20.56%</td><td class="gray-col">206</td><td>16.34%</td><td>42</td><td class="gray-col">22.65%</td><td class="gray-col">227</td><td>31.91%</td><td>82</td><td class="gray-col">11.18%</td><td class="gray-col">112</td><td>23.74%</td><td>61</td><td class="gray-col">1002</td><td>257</td></tr>
